# xfce4-applet-clock

./: configure.ac.in
panel-plugin/: Makefile.am  applet-clock.desktop.in  clock.c
